--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <!-- End Responsive -->
   <!-- Use protocol relative urls that way if the browser is viewing the page via HTTPS the js/css file will be requested using the HTTPS protocol -->
-  <link rel="stylesheet" href="//js.arcgis.com/4.0online/esri/css/calcite/common.css">
-  <link rel="stylesheet" href="//js.arcgis.com/4.0online/esri/css/main.css">
-  <link rel="stylesheet" href="assets/css/calcite-web.css">
+  <link rel="stylesheet" href="//js.arcgis.com/4.0/esri/css/calcite/common.css">
+  <link rel="stylesheet" href="//js.arcgis.com/4.0/esri/css/main.css">
+  <!-- <link rel="stylesheet" href="assets/css/calcite-web.css"> -->
   <!-- Load any application specific styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="js/VizCards/css/VizCards.css">
@@ -59,6 +59,9 @@
       name: "application",
       location: package_path + '/js'
     }, {
+      name: "lib",
+      location: package_path + '/lib'
+    }, {
       name: "config",
       location: package_path + '/config'
     }, {
@@ -70,8 +73,9 @@
     dojoConfig.locale = RegExp.$1;
   }
   </script>
-  <script src="assets/js/calcite-web.js"></script>
-  <script type="text/javascript" src="//js.arcgis.com/4.0online/"></script>
+  <!-- <script src="assets/js/calcite-web.js"></script> -->
+  <script type="text/javascript" src="//js.arcgis.com/4.0/"></script>
+  <script src="./lib/three.min.js"></script>
   <script type="text/javascript">
   require([
     "config/templateConfig",
