--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <title></title>
   <meta charset="utf-8">
-  <!-- Define the versions of IE that will be used to render the page. See Microsoft documentation for details. Optional. -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="mobile-web-app-capable" content="yes">
@@ -15,7 +13,7 @@
   <!-- Use protocol relative urls that way if the browser is viewing the page via HTTPS the js/css file will be requested using the HTTPS protocol -->
   <!-- <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/calcite/common.css"> -->
   <!-- <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css"> -->
-  <link rel="stylesheet" href="//js.arcgis.com/4.3/esri/themes/light/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.4/esri/themes/light/main.css">
   <!-- Load any application specific styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="js/VizCards/css/VizCards.css">
@@ -74,7 +72,7 @@
   }
   </script>
   <!-- <script src="assets/js/calcite-web.js"></script> -->
-  <script type="text/javascript" src="//js.arcgis.com/4.3/"></script>
+  <script type="text/javascript" src="https://js.arcgis.com/4.4/"></script>
   <script src="./lib/three.min.js"></script>
   <script type="text/javascript">
   require([
