--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Use protocol relative urls that way if the browser is viewing the page via HTTPS the js/css file will be requested using the HTTPS protocol -->
   <!-- <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/calcite/common.css"> -->
   <!-- <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css"> -->
-  <link rel="stylesheet" href="https://js.arcgis.com/4.5/esri/themes/light/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.10/esri/themes/light/main.css">
   <!-- Load any application specific styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="js/VizCards/css/VizCards.css">
@@ -50,55 +50,58 @@
     </div>
   </div>
   <script type="text/javascript">
-  var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
-  var dojoConfig = {
-    async: true,
-    packages: [{
-      name: "application",
-      location: package_path + '/js'
-    }, {
-      name: "lib",
-      location: package_path + '/lib'
-    }, {
-      name: "config",
-      location: package_path + '/config'
-    }, {
-      name: "arcgis_templates",
-      location: package_path + '/..'
-    }]
-  };
-  if (location.search.match(/locale=([\w-]+)/)) {
-    dojoConfig.locale = RegExp.$1;
-  }
+    var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
+    var dojoConfig = {
+      async: true,
+      has: {
+        "esri-promise-compatibility-deprecation-warnings": 0
+      },
+      packages: [{
+        name: "application",
+        location: package_path + '/js'
+      }, {
+        name: "lib",
+        location: package_path + '/lib'
+      }, {
+        name: "config",
+        location: package_path + '/config'
+      }, {
+        name: "arcgis_templates",
+        location: package_path + '/..'
+      }]
+    };
+    if (location.search.match(/locale=([\w-]+)/)) {
+      dojoConfig.locale = RegExp.$1;
+    }
   </script>
   <!-- <script src="assets/js/calcite-web.js"></script> -->
-  <script type="text/javascript" src="https://js.arcgis.com/4.5/"></script>
+  <script type="text/javascript" src="https://js.arcgis.com/4.10/"></script>
   <script src="./lib/three.min.js"></script>
   <script type="text/javascript">
-  require([
-    "config/templateConfig",
-    "application/template",
-    "application/main"
-  ], function(
-    templateConfig,
-    Template,
-    Main
-  ) {
-    // create the template. This will take care of all the logic required for template applications
-    var myTemplate = new Template(templateConfig);
-    // create my main application. Start placing your logic in the main.js file.
-    var myApp = new Main();
-    // start template
-    myTemplate.startup().then(function(config) {
-      // The config object contains the following properties: helper services, (optionally)
-      // i18n, appid, webscene and any custom values defined by the application.
-      // In this example we have one called theme.
-      myApp.startup(config);
-    }, function(error) {
-      // something went wrong. Let's report it.
-      myApp.reportError(error);
+    require([
+      "config/templateConfig",
+      "application/template",
+      "application/main"
+    ], function (
+      templateConfig,
+      Template,
+      Main
+    ) {
+      // create the template. This will take care of all the logic required for template applications
+      var myTemplate = new Template(templateConfig);
+      // create my main application. Start placing your logic in the main.js file.
+      var myApp = new Main();
+      // start template
+      myTemplate.startup().then(function (config) {
+        // The config object contains the following properties: helper services, (optionally)
+        // i18n, appid, webscene and any custom values defined by the application.
+        // In this example we have one called theme.
+        myApp.startup(config);
+      }, function (error) {
+        // something went wrong. Let's report it.
+        myApp.reportError(error);
+      });
     });
-  });
   </script>
 </body>
 
